[gd_scene load_steps=81 format=2]

[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Idle/Minotaur_03_Idle_007.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Idle/Minotaur_03_Idle_011.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Idle/Minotaur_03_Idle_000.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Idle/Minotaur_03_Idle_005.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Idle/Minotaur_03_Idle_009.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Idle/Minotaur_03_Idle_002.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Idle/Minotaur_03_Idle_003.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Idle/Minotaur_03_Idle_010.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Idle/Minotaur_03_Idle_004.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Idle/Minotaur_03_Idle_008.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Idle/Minotaur_03_Idle_001.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Idle/Minotaur_03_Idle_006.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_001.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_011.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_014.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_000.png" type="Texture" id=16]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_008.png" type="Texture" id=17]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_003.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_004.png" type="Texture" id=19]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_009.png" type="Texture" id=20]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_012.png" type="Texture" id=21]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_015.png" type="Texture" id=22]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_006.png" type="Texture" id=23]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_007.png" type="Texture" id=24]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_017.png" type="Texture" id=25]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_013.png" type="Texture" id=26]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_002.png" type="Texture" id=27]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_010.png" type="Texture" id=28]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_005.png" type="Texture" id=29]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Taunt/Minotaur_03_Taunt_016.png" type="Texture" id=30]
[ext_resource path="res://Scenes/Mobs/Warrior.gd" type="Script" id=31]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_009.png" type="Texture" id=32]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_014.png" type="Texture" id=33]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_013.png" type="Texture" id=34]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_006.png" type="Texture" id=35]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_017.png" type="Texture" id=36]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Attacking/Minotaur_03_Attacking_000.png" type="Texture" id=37]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Attacking/Minotaur_03_Attacking_001.png" type="Texture" id=38]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Attacking/Minotaur_03_Attacking_002.png" type="Texture" id=39]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Attacking/Minotaur_03_Attacking_003.png" type="Texture" id=40]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_003.png" type="Texture" id=41]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_005.png" type="Texture" id=42]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_001.png" type="Texture" id=43]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_016.png" type="Texture" id=44]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_008.png" type="Texture" id=45]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_007.png" type="Texture" id=46]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_000.png" type="Texture" id=47]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_004.png" type="Texture" id=48]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_011.png" type="Texture" id=49]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_010.png" type="Texture" id=50]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_012.png" type="Texture" id=51]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_015.png" type="Texture" id=52]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Walking/Minotaur_03_Walking_002.png" type="Texture" id=53]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Attacking/Minotaur_03_Attacking_009.png" type="Texture" id=54]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Attacking/Minotaur_03_Attacking_006.png" type="Texture" id=55]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Attacking/Minotaur_03_Attacking_007.png" type="Texture" id=56]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Attacking/Minotaur_03_Attacking_005.png" type="Texture" id=57]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Attacking/Minotaur_03_Attacking_008.png" type="Texture" id=58]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Attacking/Minotaur_03_Attacking_004.png" type="Texture" id=59]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Attacking/Minotaur_03_Attacking_011.png" type="Texture" id=60]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Attacking/Minotaur_03_Attacking_010.png" type="Texture" id=61]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_011.png" type="Texture" id=62]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_001.png" type="Texture" id=63]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_014.png" type="Texture" id=64]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_010.png" type="Texture" id=65]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_007.png" type="Texture" id=66]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_000.png" type="Texture" id=67]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_003.png" type="Texture" id=68]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_004.png" type="Texture" id=69]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_008.png" type="Texture" id=70]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_005.png" type="Texture" id=71]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_009.png" type="Texture" id=72]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_013.png" type="Texture" id=73]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_012.png" type="Texture" id=74]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_002.png" type="Texture" id=75]
[ext_resource path="res://Scenes/Mobs/Assets/Minotaur/Dying/Minotaur_03_Dying_006.png" type="Texture" id=76]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 1 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 11.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 43 ), ExtResource( 53 ), ExtResource( 41 ), ExtResource( 48 ), ExtResource( 42 ), ExtResource( 35 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 32 ), ExtResource( 50 ), ExtResource( 49 ), ExtResource( 51 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 52 ), ExtResource( 44 ), ExtResource( 36 ) ],
"loop": true,
"name": "walk",
"speed": 17.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 59 ), ExtResource( 57 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 58 ), ExtResource( 54 ), ExtResource( 61 ), ExtResource( 60 ) ],
"loop": false,
"name": "attack",
"speed": 22.0
}, {
"frames": [ ExtResource( 67 ), ExtResource( 63 ), ExtResource( 75 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 71 ), ExtResource( 76 ), ExtResource( 66 ), ExtResource( 70 ), ExtResource( 72 ), ExtResource( 65 ), ExtResource( 62 ), ExtResource( 74 ), ExtResource( 73 ), ExtResource( 64 ) ],
"loop": false,
"name": "death",
"speed": 14.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 13 ), ExtResource( 27 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 29 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 28 ), ExtResource( 14 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 15 ), ExtResource( 22 ), ExtResource( 30 ), ExtResource( 25 ) ],
"loop": false,
"name": "taunt",
"speed": 34.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 138.677
height = 166.975

[sub_resource type="CircleShape2D" id=3]
radius = 2394.26

[sub_resource type="CircleShape2D" id=4]
radius = 791.144

[node name="Warrior" type="KinematicBody2D" groups=[
"mobs",
]]
collision_layer = 2
collision_mask = 37
script = ExtResource( 31 )
SPEED = 300
DAMAGE = 20
MAX_HEALTH = 300
DASH_SPEED = 750.0

[node name="Animation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource( 4 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="RangeArea" to="." method="_on_RangeArea_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_RangeArea_body_exited"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
